<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:theme="@style/Theme.Transparent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:paddingLeft="30dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="35dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_info"
            android:paddingLeft="30dp"
            android:textColor="#fff"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="@drawable/card_background"
            android:elevation="36dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/title_btn_login"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="26dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_edit_text"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:errorEnabled="true"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/title_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbRemember"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/remember_me"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="17dp"
                    android:textStyle="italic"
                    android:textColor="#33adff"
                    android:paddingLeft="10dp"
                    android:text="I don't have account"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:background="@drawable/style_btn_login"
                    android:text="@string/title_btn_login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoginForGoogle"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:background="@drawable/style_btn_login_google"
                android:paddingStart="20dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16dp"
                android:height="50dp"
                android:paddingLeft="30dp"
                android:drawableStart="@drawable/ic_google"
                android:text="@string/title_btn_login_google"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>