<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityInfoHotel">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/img_hotel"
            android:scaleType="fitXY"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#421E2020"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtBack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/ic_chevron_left" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_heart" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:background="@drawable/card_background_main"
            android:elevation="36dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/labelHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/txtAddressForHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_black"
                    android:text="@string/welcome"
                    android:textColor="#5D4A44"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelHotel"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$800"
                        android:textColor="#1B6CA8"
                        android:textSize="60dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_star" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_star" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_star" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_star" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_star" />
                </LinearLayout>
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/info_hotel"
                android:paddingBottom="50dp"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_lorem"
                        android:textColor="@color/black"
                        android:maxLines="3"
                        android:ellipsize = "end"
                        android:textSize="17dp" />
                    <TextView
                        android:id="@+id/readMore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/read_more"
                        android:textColor="#2d5a7d"
                        android:layout_marginTop="10dp"
                        android:textSize="23dp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/style_edit_text"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:translationZ="99dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>
</RelativeLayout>